--- a/nb-NO/dom/chrome/appstrings.properties
+++ b/nb-NO/dom/chrome/appstrings.properties
@@ -23,13 +23,13 @@ proxyConnectFailure=Tilkoblingen til proxy ble avvist. Kontroller proxyinnstilli
 contentEncodingError=Nettsiden du forsøker å åpne kan ikke vises fordi den bruker ugyldig eller ustøttet komprimering.
 unsafeContentType=Nettsiden du forsøker å åpne kan ikke vises fordi den har en filtype som er utrygg å åpne. Kontakt nettstedseierne om dette problemet.
 externalProtocolTitle=Ekstern protokollforespørsel
-externalProtocolPrompt=Et eksternt program må startes for å håndtere %1$S:-lenker. Forespurt lenke:\n\n\n%2$S\nProgram: %3$S\n\n\nDersom du ikke forventet denne forespørselen kan det hende at det er et forsøk på å utnytte en svakhet i det eksterne programmet. Avbryt denne forespørselen med mindre du er sikker på at den ikke er ondsinnet.\n
+externalProtocolPrompt=Et eksternt program må startes for å håndtere %1$S:-lenker.\n\n\nForespurt lenke:\n\n%2$S\n\nProgram: %3$S\n\n\nDersom du ikke forventet denne forespørselen kan det hende at det er et forsøk på å utnytte en svakhet i det eksterne programmet. Avbryt denne forespørselen med mindre du er sikker på at den ikke er ondsinnet.\n
 #LOCALIZATION NOTE (externalProtocolUnknown): The following string is shown if the application name can't be determined
 externalProtocolUnknown=<Ukjent>
 externalProtocolChkMsg=Husk valget mitt for alle lenker av denne typen.
 externalProtocolLaunchBtn=Start programmet
 malwareBlocked=Nettstedet på %S er rapportert som et angrepsnettsted, og er blokkert på grunnlag av sikkerhetsinnstillingene dine.
 phishingBlocked=Nettstedet på %S er rapportert som et svindelnettsted som er laget for å lure brukere til å oppgi personlig eller finansiell informasjon.
-cspFrameAncestorBlocked=Denne nettsiden har en sikkerhetspolicy som forhindrer den fra å bli innbundet på denne måten.
+cspBlocked=Denne nettsiden har en sikkerhetspolicy som forhindrer den fra å lastes inn på denne måten.
 corruptedContentError=Siden du prøver å vise kan ikke åpnes på grunn av en feil i dataoverføringen.
 remoteXUL=Denne siden bruker en ustøttet teknologi som ikke lenger er tilgjengelig med standardoppsett.
