--- a/nb-NO/toolkit/chrome/global/aboutSupport.properties
+++ b/nb-NO/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = WebGL-renderer
 
 minLibVersions = Forventet minimumsversjon
 loadedLibVersions = Versjon i bruk
+
+hasSeccompBPF = Seccomp-BPF (systemkall-filtrering)
+canSandboxContent = Sandkasse for innholdsprosesser
+canSandboxMedia = Sandkasse for medietillegg
