--- a/nb-NO/toolkit/chrome/global/aboutTelemetry.properties
+++ b/nb-NO/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Denne siden viser info om ytelse, maskinvare, bruksmønster og utvidelser som er innsamlet av Telemetry. Denne infoen sendes til %1$S for å hjelpe forbedre %2$S.
 
+generalDataHeadingName = Navn
+
+generalDataHeadingValue = Verdi
+
 slowSqlMain = Trege SQL-uttrykk på hovedtråden
 
 slowSqlOther = Trege SQL-uttrykk på hjelpetråder
