--- a/nb-NO/webapprt/webapprt/overrides/appstrings.properties
+++ b/nb-NO/webapprt/webapprt/overrides/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Husk valget mitt for alle lenker med denne typen.
 externalProtocolLaunchBtn=Start program
 malwareBlocked=Nettstedet på %S er rapportert som et angrepsnettsted, og er blokkert på bakgrunn av sikkerhetsinnstillingene.
 phishingBlocked=Nettstedet på %S er rapportert som en nettsvindel beregnet på å lure brukere til å oppgi personlig eller finansiell informasjon.
-cspFrameAncestorBlocked=Programmet forsøkte å bruke en ressurs som har innholdssikkerhetspolicy som forhindrer den å innbindes på denne måten.
+cspBlocked=Programmet forsøkte å bruke en ressurs som har innholdssikkerhetspolicy som forhindrer den fra å lastes på denne måten.
 corruptedContentError=Programmet kan ikke fortsette innlastingen på grunn av en feil i dataoverføringen.
 remoteXUL=Dette programmet forsøkte å bruke en ustøttet som ikke lenger er tilgjengelig.
