--- a/nb-NO/browser/chrome/overrides/appstrings.properties
+++ b/nb-NO/browser/chrome/overrides/appstrings.properties
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Husk valget mitt for alle lenker av denne typen.
 externalProtocolLaunchBtn=Start programmet
 malwareBlocked=Nettstedet på %S er rapportert som et angrepsnettsted, og er blokkert på grunnlag av sikkerhetsinnstillingene dine.
 phishingBlocked=Nettstedet på %S er rapportert som et svindelnettsted som er laget for å lure brukere til å oppgi personlig eller finansiell informasjon.
-cspFrameAncestorBlocked=Denne nettsiden har en sikkerhetspolicy som forhindrer den fra å bli innbundet på denne måten.
+cspBlocked=Denne nettsiden har en sikkerhetspolicy som forhindrer den fra å lastes inn på denne måten.
 corruptedContentError=Siden du prøver å vise kan ikke åpnes på grunn av en feil i dataoverføringen.
 remoteXUL=Denne siden bruker en ustøttet teknologi som ikke lenger er tilgjengelig i Firefox med standardoppsett.
