--- a/nb-NO/dom/chrome/security/security.properties
+++ b/nb-NO/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Forespørsel med kryssende opprinnelse ble blokkert: Sam
 InvalidSTSHeaders=Nettstedet oppgav en ugyldig Strict-Transport-Security header.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Nettstedet oppgav e ugyldig Public-Key-Pins header.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Denne siden bruker et SHA-1-sertifikat. Det anbefales at du bruker sertifikater med signaturalgoritmer som bruker hashfunksjoner som er sterkere enn SHA-1.
 InsecurePasswordsPresentOnPage=Passordfelt vises på en usikker (http://) side. Dette er en sikkerhetsrisiko som medfører risiko for at brukerinformasjon kan stjeles.
 InsecureFormActionPasswordsPresent=Passordfelt vises i et skjema med usikker (http://) skjemahandling. Dette er en sikkerhetsrisiko som medfører risiko for at brukerinformasjon kan stjeles.
 InsecurePasswordsPresentOnIframe=Passordfelt vises på en usikker (http://) iframe. Dette er en sikkerhetsrisiko som medfører risiko for at brukerinformasjon kan stjeles.
