--- a/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
+++ b/nb-NO/security/manager/chrome/pipnss/nsserrors.properties
@@ -314,3 +314,4 @@ SEC_ERROR_CERT_SIGNATURE_ALGORITHM_DISABLED=Sertifikatet ble signert med en sign
 MOZILLA_PKIX_ERROR_KEY_PINNING_FAILURE=Serveren bruker key pinning (HPKP), men ingen tiltrodde sertifikater ble funnet som passer til pin-settet. Brudd på key-pinning kan ikke overstyres.
 MOZILLA_PKIX_ERROR_CA_CERT_USED_AS_END_ENTITY=Serveren bruker et sertifikat som identifiserer det som en sertifikatutsteder. For et riktig utstedt sertifikat bør ikke dette skje.
 MOZILLA_PKIX_ERROR_INADEQUATE_KEY_SIZE=Serveren bruker et sertifikat med en nøkkelstørrelse som er for liten til å etablere en sikker tilkobling.
+MOZILLA_PKIX_ERROR_V1_CERT_USED_AS_CA=Et X.509 versjon 1-sertifikat som ikke er et tiltrodd ble brukt til å utstede serverens sertifikat. X.509 versjon 1-sertifikater er foreldede, og bør ikke brukes til å signere andre sertifikater.
