--- a/nb-NO/security/manager/chrome/pippki/pippki.properties
+++ b/nb-NO/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,14 @@ pageInfo_NoEncryption=Tilkoblingen er ikke kryptert
 pageInfo_Privacy_None1=Nettstedet %S støtter ikke kryptering for nettsiden du ser på.
 pageInfo_Privacy_None2=Informasjon som blir sendt over Internett uten kryptering kan bli lest av andre mens den overføres.
 pageInfo_Privacy_None3=Siden du ser på er ikke kryptert.
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits=Tilkoblingen kryptert: Høygradskryptering (%S, %S-bits nøkler)
-pageInfo_Privacy_Strong1=Siden som du ser på ble kryptert før den ble overført over Internett.
-pageInfo_Privacy_Strong2=Kryptering gjør det veldig vanskelig for uautoriserte personer å se informasjonen som går over nettet. Det er derfor veldig usannsynlig at noen kan lese siden mens den overføres.
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits=Tilkoblingen kryptert: Lavgradskryptering (%S, %S-bits nøkler)
-pageInfo_Privacy_Weak1=Nettstedet %S bruker lavgradskryptering for siden du ser på.
-pageInfo_Privacy_Weak2=Lavgradskryptering kan tillate noen uautoriserte personer å se informasjonen som overføres.
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol=Tilkoblingen kryptert (%1$S, %2$S bit nøkler, %3$S)
+pageInfo_Privacy_Encrypted1=Siden som du ser på ble kryptert før den ble overført over Internett.
+pageInfo_Privacy_Encrypted2=Kryptering gjør det vanskelig for uautoriserte personer å se informasjonen som overføres mellom datamaskiner. Det er derfor usannsynlig at noen leste nettsiden mens den ble overført over nettverket.
 pageInfo_MixedContent=Innholdet er delvis kryptert
-pageInfo_Privacy_Mixed1=Deler av nettsiden du ser på ble ikke kryptert før den ble overført over Internett.
+pageInfo_Privacy_Broken1=Deler av nettsiden du ser på ble ikke kryptert, eller krypteringen var ikke sterk nok, før den ble overført over Internett.
 
 #Cert Viewer
 certDetails=Sertifikatviser:
