--- a/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/nb-NO/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -97,8 +97,10 @@ quit-button.tooltiptext.linux2 = Avslutt %1$S (%2$S)
 # %2$S is the keyboard shortcut
 quit-button.tooltiptext.mac = Avslutt %1$S (%2$S)
 
-loop-call-button2.label = Start en samtale
-loop-call-button2.tooltiptext = Start en samtale
+# LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
+# approval before you change it.
+loop-call-button3.label = Hello
+loop-call-button3.tooltiptext = Start en samtale
 
 social-share-button.label = Del denne siden
 social-share-button.tooltiptext = Del denne siden
@@ -111,5 +113,6 @@ web-apps-button.tooltiptext = Oppdag apper
 
 # LOCALIZATION NOTE(devtools-webide-button.label, devtools-webide-button.tooltiptext):
 # widget is only visible after WebIDE has been started once (Tools > Web Developers > WebIDE)
-devtools-webide-button.label = WebIDE
-devtools-webide-button.tooltiptext = Åpne WebIDE
+# %S is the keyboard shortcut
+devtools-webide-button2.label = WebIDE
+devtools-webide-button2.tooltiptext = Åpne WebIDE (%S)
