--- a/nb-NO/browser/chrome/browser/loop/loop.properties
+++ b/nb-NO/browser/chrome/browser/loop/loop.properties
@@ -98,6 +98,7 @@ new_contact_button=Ny kontakt
 new_contact_name_placeholder=Navn
 new_contact_email_placeholder=E-post
 new_contact_phone_placeholder=Firefox OS-telefon
+new_contact_phone_placeholder2=Telefon
 
 contacts_blocked_contacts=Blokkerte kontakter
 
@@ -122,17 +123,13 @@ importing_contacts_progress_button=Importerer …
 ## LOCALIZATION NOTE(sync_contacts_button): This button is displayed in place of
 ## importing_contacts_button once contacts have been imported once.
 sync_contacts_button=Synkroniser kontakter
+
 ## LOCALIZATION NOTE(import_failed_description simple): Displayed when an import of
 ## contacts fails. This is displayed in the error field here:
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
 import_failed_description_simple=Beklager, import av kontakter mislyktes
-## LOCALIZATION NOTE(import_failed_description): Displayed when an import of contacts
-## fails and the user may need more help. In this item, don't translate the part between
-## {{..}} because this will be replaced by the label from import_failed_support_link_label.
-## This is displayed in the error field here:
-## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#error
-import_failed_description=Beklager, importering av kontakter mislyktes. Se {{import_failed_support_link_label}} for hjelp
-import_failed_support_link_label=brukerstøtte
+import_failed_description_some=Noen av kontaktene kunne ikke importeres
+import_failed_support_button=Hjelp
 
 ## LOCALIZATION NOTE(remove_contact_menu_button): Displayed in the contact list in
 ## a pop-up menu next to the contact's name.
@@ -309,6 +306,8 @@ rooms_list_delete_tooltip=Slett samtale
 rooms_list_deleteConfirmation_label=Er du sikker?
 rooms_list_no_current_conversations=Ingen nåværende samtaler
 rooms_name_this_room_label=Navngi denne samtalen
+rooms_name_this_room_tooltip2=Trykk for å endre navnet på samtalen
+rooms_name_change_failed_label=Klarte ikke endre navn på samtalen
 rooms_new_room_button_label=Start en samtale
 rooms_only_occupant_label=Du er den første her.
 rooms_panel_title=Velg en samtale eller start en ny
@@ -317,3 +316,4 @@ rooms_room_full_call_to_action_nonFx_label=Last ned {{brandShortname}} for å st
 rooms_room_full_call_to_action_label=Les mer om {{clientShortname}} »
 rooms_room_joined_label=Noen har koblet til samtalen!
 rooms_room_join_label=Koble til samtalen
+rooms_signout_alert=Åpne samtaler vil lukkes
