--- a/nb-NO/browser/chrome/browser/shellservice.properties
+++ b/nb-NO/browser/chrome/browser/shellservice.properties
@@ -7,7 +7,7 @@ safeModeLabel=%S &sikker modus
 
 # LOCALIZATION NOTE (setDefaultBrowserMessage2, setDefaultBrowserConfirm.label):
 # %S will be replaced by brandShortName
-setDefaultBrowserMessage2          = Få mest mulig ut av %S ved å sette den som standard nettleser
+setDefaultBrowserMessage2          = Få mest mulig ut av %S ved å velge den som standard nettleser
 setDefaultBrowserConfirm.label     = Bruk %S som standard nettleser
 setDefaultBrowserConfirm.accesskey = B
 setDefaultBrowserOptions.label     = Innstillinger
@@ -17,6 +17,12 @@ setDefaultBrowserNotNow.accesskey  = k
 setDefaultBrowserNever.label       = Ikke spør igjen
 setDefaultBrowserNever.accesskey   = e
 
+# LOCALIZATION NOTE (setDefaultBrowserTitle, setDefaultBrowserMessage, setDefaultBrowserDontAsk):
+# These strings are used as an alternative to the ones above, in a modal dialog.
+# %S will be replaced by brandShortName
+setDefaultBrowserTitle=Standard nettleser
+setDefaultBrowserMessage=%S er ikke valgt som standard nettleser. Vil du bruke den som standard nettleser?
+setDefaultBrowserDontAsk=Alltid utfør denne kontrollen ved oppstart av %S.
 
 desktopBackgroundLeafNameWin=Skrivebordsbakgrunn.bmp
 DesktopBackgroundDownloading=Lagrer bilde …
