--- a/nb-NO/browser/chrome/browser/aboutPrivateBrowsing.properties
+++ b/nb-NO/browser/chrome/browser/aboutPrivateBrowsing.properties
@@ -2,4 +2,5 @@
 # License, v. 2.0. If a copy of the MPL was not distributed with this
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
-chooseFileDialogTitle=Velg fil
+title=Du bruker nå privat nettlesing
+title.normal=Åpne et privat vindu?
