--- a/nb-NO/browser/chrome/browser/browser.properties
+++ b/nb-NO/browser/chrome/browser/browser.properties
@@ -295,7 +295,7 @@ identity.identified.verified_by_you=Du har laget et sikkerhetsunntak for dette n
 identity.identified.state_and_country=%S, %S
 
 identity.encrypted2=Tilkoblingen til nettstedet er sikker.
-identity.mixed_display_loaded=Tilkoblingen til dette nettstedet er ikke fullstendig sikker, fordi den inneholder ukrypterte elementer (som f.eks. bilder).
+identity.broken_loaded=Tilkoblingen til dette nettstedet er ikke fullstendig sikker, fordi den inneholder ukrypterte elementer (som f.eks. bilder), eller krypteringen er ikke sterk nok.
 identity.mixed_active_loaded2=Dette nettstedet inneholder interaktivt innhold som ikke er kryptert (som f.eks. skript). Andre personer kan se informasjonen, eller endre nettstedets oppførsel.
 identity.unencrypted=Tilkoblingen til nettstedet er ikke kryptert.
 
