--- a/nb-NO/security/manager/chrome/pippki/pippki.properties
+++ b/nb-NO/security/manager/chrome/pippki/pippki.properties
@@ -147,17 +147,17 @@ writeFileUnknownError=Ukjent feil
 addExceptionBrandedWarning2=Du overstyrer nå hvordan %S identifiserer denne serveren.
 addExceptionInvalidHeader=Dette nettstedet forsøker å identifisere seg med ugyldig informasjon.
 addExceptionDomainMismatchShort=Feil nettsted
-addExceptionDomainMismatchLong=Sertifikatet tilhører et annet nettsted, noe som kan bety identitetstyveri.
+addExceptionDomainMismatchLong2=Sertifikatet tilhører et annet nettsted, som kan bety at noen prøver å etterligne dette nettstedet.
 addExceptionExpiredShort=Utdatert informasjon
-addExceptionExpiredLong=Sertifikatet er ikke gyldig nå. Det er ikke mulig å avgjøre om identiteten er rapportert som stjålet eller mistet.
+addExceptionExpiredLong2=Sertifikatet er ikke gyldig nå. Sertifikatet kan ha blitt stjålet eller tapt, og det kan være at noen bruker det til å etterligne dette nettstedet.
 addExceptionUnverifiedOrBadSignatureShort=Ukjent identitet
-addExceptionUnverifiedOrBadSignatureLong=Sertifikatet er ikke tiltrodd fordi det ikke er bekreftet av en kjent utsteder med en trygg signatur.
+addExceptionUnverifiedOrBadSignatureLong2=Sertifikatet er ikke tiltrodd fordi det ikke er bekreftet at sertifikatet er utstedt av en kjent utsteder med en trygg signatur.
 addExceptionValidShort=Gyldig sertifikat
 addExceptionValidLong=Dette nettstedet har en gyldig, bekreftet identitet.  Det er ikke nødvendig å legge til et unntak.
 addExceptionCheckingShort=Kontrollerer informasjon
-addExceptionCheckingLong=Forsøker å identifisere nettstedet …
+addExceptionCheckingLong2=Forsøker å identifisere dette nettstedet …
 addExceptionNoCertShort=Ingen informasjon er tilgjengelig
-addExceptionNoCertLong=Klarte ikke hente identitetsinformasjon for det oppgitte nettstedet.
+addExceptionNoCertLong2=Klarte ikke hente identitetsinformasjon for dette nettstedet.
 addExceptionConnectionFailed=Tilkobling mislyktes
 
 #Certificate Exists in database
