--- a/ja/browser/chrome/browser/customizableui/customizableWidgets.properties
+++ b/ja/browser/chrome/browser/customizableui/customizableWidgets.properties
@@ -99,7 +99,7 @@ quit-button.tooltiptext.mac		= %1$S を終了します (%2$S)
 
 # LOCALIZATION NOTE(loop-call-button3.label): This is a brand name, request
 # approval before you change it.
-loop-call-button3.label			= こんにちは
+loop-call-button3.label			= Hello
 loop-call-button3.tooltiptext		= 通話を開始します
 
 social-share-button.label		= このページを共有
