--- a/ja-JP-mac/suite/chrome/common/dataman/dataman.properties
+++ b/ja-JP-mac/suite/chrome/common/dataman/dataman.properties
@@ -33,6 +33,7 @@ perm.script.label		= スクリプトの実行
 perm.stylesheet.label		= スタイルシートの読み込み
 perm.sts/use.label		= Strict Transport Security の使用
 perm.sts/subd.label		= Strict Transport Security をサブドメインにも適用
+perm.trackingprotection.label	= トラッキング
 
 perm.type.default		= (許可設定を選択)
 
