--- a/ja-JP-mac/security/manager/chrome/pippki/pippki.properties
+++ b/ja-JP-mac/security/manager/chrome/pippki/pippki.properties
@@ -73,18 +73,14 @@ pageInfo_NoEncryption		= 接続が暗号化されていません
 pageInfo_Privacy_None1		= Web サイト %S は表示中のページの暗号化をサポートしていません。
 pageInfo_Privacy_None2		= 暗号化せずにインターネットに送信された情報は他人に傍受される可能性があります。
 pageInfo_Privacy_None3		= 表示中のページは暗号化されていません。
-# LOCALIZATION NOTE (pageInfo_StrongEncryptionWithBits): %1$S is the name of the encryption standard,
+# LOCALIZATION NOTE (pageInfo_EncryptionWithBitsAndProtocol): %1$S is the name of the encryption standard,
 # %2$S is the key size of the cipher.
-pageInfo_StrongEncryptionWithBits	= 接続が暗号化されています: %1$S、鍵長 %2$S bit (高強度の暗号化)
-pageInfo_Privacy_Strong1	= 表示中のページはインターネット上に送信される前に暗号化されています。
-pageInfo_Privacy_Strong2	= 暗号化によってコンピュータ間の通信の傍受は困難になり、このページをネットワークで転送中に誰かにその内容をのぞき見られる可能性はとても低くなります。
-# LOCALIZATION NOTE (pageInfo_WeakEncryptionWithBits): %1$S is the name of the encryption standard,
-# %2$S is the key size of the cipher.
-pageInfo_WeakEncryptionWithBits	= 接続が暗号化されています: %1$S、鍵長 %2$S bit (低強度の暗号化)
-pageInfo_Privacy_Weak1		= Web サイト %S は表示中のページで強度の低い暗号化を使用しています。
-pageInfo_Privacy_Weak2		= 暗号化の強度が低いと他人にのぞき見られる可能性があります。
+# %3$S is protocol version like "SSL 3" or "TLS 1.2"
+pageInfo_EncryptionWithBitsAndProtocol	= 接続が暗号化されています (%1$S、鍵長 %2$S bit、%3$S)
+pageInfo_Privacy_Encrypted1	= 表示中のページはインターネット上に送信される前に暗号化されています。
+pageInfo_Privacy_Encrypted2	= 暗号化によってコンピュータ間の通信の傍受は困難になり、このページをネットワークで転送中に誰かにその内容をのぞき見られる可能性は低くなります。
 pageInfo_MixedContent		= 一部の接続だけが暗号化されています
-pageInfo_Privacy_Mixed1		= 表示しているページの一部はインターネットに転送される前に暗号化されていません。
+pageInfo_Privacy_Broken1	= 表示しているページの一部はインターネットに転送される前に暗号化されてないか、充分な強度で暗号化されていません。
 
 #Cert Viewer
 certDetails			= 証明書ビューア:
@@ -147,22 +143,22 @@ writeFileIsLocked		= ファイルがロックされています
 writeFileNoDeviceSpace		= デバイスの空き領域が不足しています
 writeFileUnknownError		= 不明なエラーです
 
-#Add Security Exception dialog
 # (^^; 証明書ベースの表現にしたが information/identity などについて要再検討
+#Add Security Exception dialog
 addExceptionBrandedWarning2	= %1$0.S例外的に信頼する証明書としてこのサイトの証明書を登録しようとしています。
 addExceptionInvalidHeader	= このサイトでは不正な証明書が使用されており、サイトの識別情報を確認できません。
 addExceptionDomainMismatchShort	= 他のサイトの証明書です
-addExceptionDomainMismatchLong	= 他のサイト用の証明書が使われています。別のサイトになりすまそうとしている可能性があります。
+addExceptionDomainMismatchLong2	= 他のサイト用の証明書が使われています。誰かがこのサイトを偽装しようとしています。
 addExceptionExpiredShort	= 証明書の有効期限を過ぎています
-addExceptionExpiredLong		= このサイトの証明書は現在有効ではありません。この証明書が盗まれたもしくは紛失していたとしても確認できません。
+addExceptionExpiredLong2	= このサイトの証明書は現在有効ではありません。この証明書は盗難または紛失した可能性があり、誰かがこのサイトを偽装するために使用している可能性があります。
 addExceptionUnverifiedOrBadSignatureShort	= 不明な証明書です
-addExceptionUnverifiedOrBadSignatureLong	= 安全な署名を使った既知の認証局によって検証されていないため、このサイトの証明書は信頼されません。
+addExceptionUnverifiedOrBadSignatureLong2	= 安全な署名を使っている信頼できる認証局が発行されたものとして検証されていないため、このサイトの証明書は信頼されません。
 addExceptionValidShort		= 有効な証明書です
 addExceptionValidLong		= このサイトでは正しく検証された有効な証明書を使用しています。このサイトの証明書を例外として追加する必要はありません。
 addExceptionCheckingShort	= 証明書を確認中
-addExceptionCheckingLong	= サイトの識別情報を確認しています...
+addExceptionCheckingLong2	= このサイトの識別情報を確認しています...
 addExceptionNoCertShort		= 証明書がありません
-addExceptionNoCertLong		= このサイトを識別するための証明書を取得できませんでした
+addExceptionNoCertLong2		= このサイトを識別するための証明書を取得できませんでした
 addExceptionConnectionFailed	= 接続できませんでした
 
 #Certificate Exists in database
