Suggestions from Ivar Smolin and Marek Laane

--- a/et/browser/chrome/browser/newTab.properties
+++ b/et/browser/chrome/browser/newTab.properties
@@ -19,12 +19,12 @@ newtab.sponsored.explain=Seda ruudukest näidatakse sulle Mozilla partneri nimel
 newtab.enhanced.explain=Mozilla partner on ekraanipildi asendamisega seda ruudukest täiustanud. Täiustatud ruudukesed on vastavalt eelistustele võimalik välja lülitada, klõpsates nupul %1$S. %2$S
 # LOCALIZATION NOTE(newtab.intro.paragraph1): %1$S will be replaced inline by
 # active link using string newtab.learn.link as text.
-newtab.intro.paragraph1=Uue kaardi avamisel kuvatakse ruudukesi saitidest, mida külastad tihedamini, ja ruudukesi saitidest, mis meie arvates võiksid sulle huvi pakkuda. Mõned neist ruudukestest võivad olla sponsitud Mozilla partnerite poolt. Me anname sponsitud ruudukestest alati teada. %1$S
+newtab.intro.paragraph1=Uue kaardi avamisel kuvatakse ruudukesi saitidest, mida oled tihedamini külastanud või mis meie arvates võiksid sulle huvi pakkuda. Mõnda ruudukest võivad olla sponsinud Mozilla partnerid ja need on alati vastavalt tähistatud. %1$S
 # LOCALIZATION NOTE(newtab.intro.paragraph2): %1$S will be replaced inline by
 # active link using string newtab.privacy.link as text.
-newtab.intro.paragraph2=Selle teenuse pakkumiseks kogub Mozilla teatavaid analüütilisi andmeid selle kohta, kuidas ruudukesi kasutad. Andmeid kogutakse vastavalt meie privaatsusreeglitele (%1$S).
+newtab.intro.paragraph2=Selle teenuse pakkumiseks kogub Mozilla teatavaid analüütilisi andmeid ruudukeste kasutamise kohta. See toimub vastavalt meie privaatsusreeglitele (%1$S).
 # LOCALIZATION NOTE(newtab.intro.paragraph3): %1$S will be replaced inline by
 # the gear icon used to customize the new tab window.
 newtab.intro.paragraph3=Ruudukesed on võimalik vastavalt eelistustele välja lülitada, klõpsates nupul %1$S.
 newtab.learn.link=Rohkem teavet…
-newtab.privacy.link=Privaatsusest
+newtab.privacy.link=privaatsusest
