Change Firefox and Fennect plural rule from 1 (2 forms) to 10 (4 forms)

--- a/sl/browser/chrome/browser/devtools/canvasdebugger.properties
+++ b/sl/browser/chrome/browser/devtools/canvasdebugger.properties
@@ -69,10 +69,10 @@ snapshotsList.saveDialogAllFilter=Vse datoteke
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # as a generic description about how many draw calls were made.
-snapshotsList.drawCallsLabel=#1 risanje;Št. risanj: #1
+snapshotsList.drawCallsLabel=#1 risanje;#1 risanji;#1 risanja;#1 risanj
 
 # LOCALIZATION NOTE (snapshotsList.functionCallsLabel):
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This string is displayed in the snapshots list of the Canvas Debugger,
 # as a generic description about how many function calls were made in total.
-snapshotsList.functionCallsLabel=#1 klic;Št. klicev: #1
+snapshotsList.functionCallsLabel=#1 klic;#1 klica;#1 klici;#1 klicev
