--- a/sl/browser/chrome/browser/devtools/debugger.properties
+++ b/sl/browser/chrome/browser/devtools/debugger.properties
@@ -256,7 +256,7 @@ variablesViewErrorStacktrace=Sled sklada:
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of remaining items in the object
 # example: 3 more…
-variablesViewMoreObjects=Še #1 …;Še #1 …
+variablesViewMoreObjects=Še #1 …;Še #1 …;Še #1 …;Še #1 …
 
 # LOCALIZATION NOTE (variablesEditableNameTooltip): The text that is displayed
 # in the variables list on an item with an editable name.
