--- a/sl/browser/chrome/browser/devtools/netmonitor.properties
+++ b/sl/browser/chrome/browser/devtools/netmonitor.properties
@@ -123,7 +123,7 @@ networkMenu.empty=Brez zahtev
 # This label is displayed in the network table footer providing concise
 # information about all requests. Parameters: #1 is the number of requests,
 # #2 is the size, #3 is the number of seconds.
-networkMenu.summary=Ena zahteva, #2 KB, #3 s;Več zahtev (#1), #2 KB, #3 s
+networkMenu.summary=Ena zahteva, #2 KB, #3 s;Dve zahtevi, #2 KB, #3 s;#1 zahteve, #2 KB, #3 s;#1 zahtev, #2 KB, #3 s
 
 # LOCALIZATION NOTE (networkMenu.sizeKB): This is the label displayed
 # in the network menu specifying the size of a request (in kilobytes).
@@ -189,7 +189,7 @@ charts.totalSize=Velikost: %S KB
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # This is the label displayed in the performance analysis view for the
 # total requests time, in seconds.
-charts.totalSeconds=Čas: #1 s;Čas: #1 s
+charts.totalSeconds=Čas: #1 sekunda;Čas: #1 sekundi;Čas: #1 sekunde;Čas: #1 sekund
 
 # LOCALIZATION NOTE (charts.totalCached): This is the label displayed
 # in the performance analysis view for total cached responses.
