--- a/sl/browser/chrome/browser/devtools/styleeditor.properties
+++ b/sl/browser/chrome/browser/devtools/styleeditor.properties
@@ -30,7 +30,7 @@ newStyleSheet=Nova slogovna predloga #%S
 # This is shown in the style sheets list.
 # #1 rule.
 # example: 111 rules.
-ruleCount.label=#1 pravilo.;Št. pravil: #1.
+ruleCount.label=#1 pravilo.;#1 pravili.;#1 pravila.;#1 pravil.
 
 # LOCALIZATION NOTE  (error-load.label): This is shown when loading fails.
 error-load=Slogovne predloge ni bilo mogoče naložiti.
