--- a/sl/browser/chrome/browser/devtools/toolbox.properties
+++ b/sl/browser/chrome/browser/devtools/toolbox.properties
@@ -10,13 +10,13 @@ toolboxDockButtons.window.tooltip=Prikaži v samostojnem oknu
 # forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of errors in the current web page
-toolboxToggleButton.errors=#1 napaka;Več napak (#1)
+toolboxToggleButton.errors=#1 napaka;#1 napaki;#1 napake;#1 napak
 
 # LOCALIZATION NOTE (toolboxToggleButton.warnings): Semi-colon list of plural
 # forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of warnings in the current web page
-toolboxToggleButton.warnings=#1 opozorilo;Več opozoril (#1)
+toolboxToggleButton.warnings=#1 opozorilo;#1 opozorili;#1 opozorila;#1 opozoril
 
 # LOCALIZATION NOTE (toolboxToggleButton.tooltip): This string is shown
 # as tooltip in the developer toolbar to open/close the developer tools.
