--- a/sl/browser/chrome/browser/loop/loop.properties
+++ b/sl/browser/chrome/browser/loop/loop.properties
@@ -27,7 +27,7 @@ invitee_name_label=Koga želite povabiti?
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_days_label=Vabilo bo poteklo čez {{expiry_time}} dan;Vabilo bo poteklo čez {{expiry_time}} dni
+invitee_expire_days_label=Vabilo bo poteklo čez {{expiry_time}} dan;Vabilo bo poteklo čez {{expiry_time}} dni;Vabilo bo poteklo čez {{expiry_time}} dni;Vabilo bo poteklo čez {{expiry_time}} dni
 ## LOCALIZATION NOTE(invitee_expire_hours_label): Allows the user to adjust
 ## the expiry time. Click the label icon are the end of the url field to see where
 ## this is:
@@ -35,7 +35,7 @@ invitee_expire_days_label=Vabilo bo poteklo čez {{expiry_time}} dan;Vabilo bo p
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-invitee_expire_hours_label=Vabilo bo poteklo čez {{expiry_time}} uro;Vabilo bo poteklo čez nekaj ur ({{expiry_time}})
+invitee_expire_hours_label=Vabilo bo poteklo čez {{expiry_time}} uro;Vabilo bo poteklo čez {{expiry_time}} uri;Vabilo bo poteklo čez {{expiry_time}} ure;Vabilo bo poteklo čez {{expiry_time}} ur
 
 # Status text
 display_name_guest=Gost
@@ -282,7 +282,7 @@ feedback_back_button=Nazaj
 ## Semicolon-separated list of plural forms. See:
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## In this item, don't translate the part between {{..}}
-feedback_window_will_close_in2=Okno se bo kmalu zaprlo: {{countdown}};Okno se bo kmalu zaprlo: {{countdown}}
+feedback_window_will_close_in2=Okno se bo zaprlo čez {{countdown}} sekundo;Okno se bo zaprlo čez {{countdown}} sekundi;Okno se bo zaprlo čez {{countdown}} sekunde;Okno se bo zaprlo čez {{countdown}} sekund
 ## LOCALIZATION_NOTE (feedback_rejoin_button): Displayed on the feedback form after
 ## a signed-in to signed-in user call.
 ## https://people.mozilla.org/~dhenein/labs/loop-mvp-spec/#feedback
@@ -304,7 +304,7 @@ rooms_list_copy_url_tooltip=Kopiraj povezavo
 ## http://developer.mozilla.org/en/docs/Localization_and_Plurals
 ## We prefer to have no number in the string, but if you need it for your
 ## language please use {{num}}.
-rooms_list_current_conversations=Trenuten pogovor;Trenutni pogovori
+rooms_list_current_conversations=Trenuten pogovor;Trenutna pogovora;Trenutni pogovori;Trenutni pogovori
 rooms_list_delete_tooltip=Izbriši pogovor
 rooms_list_deleteConfirmation_label=Ste prepričani?
 rooms_list_no_current_conversations=Ni trenutnih pogovorov
