--- a/sl/browser/chrome/browser/places/places.properties
+++ b/sl/browser/chrome/browser/places/places.properties
@@ -64,7 +64,7 @@ detailsPane.noItems=Brez predmetov
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of items
 # example: 111 items
-detailsPane.itemsCountLabel=En predmet;#1 predmetov
+detailsPane.itemsCountLabel=En predmet;#1 predmeta;#1 predmeti;#1 predmetov
 
 mostVisitedTitle=Najbolj obiskano
 recentlyBookmarkedTitle=Nedavni zaznamki
