--- a/sl/browser/chrome/browser/preferences/aboutPermissions.properties
+++ b/sl/browser/chrome/browser/preferences/aboutPermissions.properties
@@ -3,7 +3,7 @@
 # file, You can obtain one at http://mozilla.org/MPL/2.0/.
 
 # LOCALIZATION NOTE (visitCount): #1 is the number of history visits for a site
-visitCount=Število obiskov: #1;Število obiskov: #1
+visitCount=#1 obisk;#1 obiska;#1 obiski;#1 obiskov
 
-passwordsCount=Število shranjenih gesel za to stran: #1.;Število shranjenih gesel za to stran: #1.
-cookiesCount=Število shranjenih piškotkov za to stran: #1.;Število shranjenih piškotkov za to stran: #1.
+passwordsCount=#1 geslo shranjeno za to stran.;#1 gesli shranjeni za to stran.;#1 gesla shranjena za to stran.;#1 gesel shranjenih za to stran.
+cookiesCount=#1 piškotek shranjen za to stran.;#1 piškotka shranjena za to stran.;#1 piškotki shranjeni za to stran.;#1 piškotkov shranjenih za to stran.
