--- a/sl/browser/chrome/browser/tabbrowser.properties
+++ b/sl/browser/chrome/browser/tabbrowser.properties
@@ -26,6 +26,6 @@ tabs.closeWarningTitle=Potrdi zapiranje
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The singular form is not considered since this string is used only for
 # multiple tabs.
-tabs.closeWarningMultiple=Zaprli boste zavihek. Ste prepričani, da želite nadaljevati?;Zaprli boste več zavihkov (#1). Ste prepričani, da želite nadaljevati?
+tabs.closeWarningMultiple=Zaprli boste zavihek. Ste prepričani, da želite nadaljevati?;Zaprli boste #1 zavihka. Ste prepričani, da želite nadaljevati?;Zaprli boste #1 zavihke. Ste prepričani, da želite nadaljevati?;Zaprli boste #1 zavihkov. Ste prepričani, da želite nadaljevati?
 tabs.closeButtonMultiple=Zapri zavihke
 tabs.closeWarningPromptMe=Opozori me, ko poskušam zapreti več zavihkov
