--- a/sl/dom/chrome/accessibility/AccessFu.properties
+++ b/sl/dom/chrome/accessibility/AccessFu.properties
@@ -92,7 +92,7 @@ listStart      =       Prvi predmet
 listEnd        =       Zadnji predmet
 # LOCALIZATION NOTE (listItemsCount): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-listItemsCount =       1 predmet;Več predmetov (#1)
+listItemsCount =       1 predmet;#1 predmeta;#1 predmeti;#1 predmetov
 
 # LOCALIZATION NOTE: # %1$S is the position of the item n the set.
 # %2$S is the total number of such items in the set.
@@ -110,11 +110,11 @@ search         =       iskanje
 # LOCALIZATION NOTE (tblColumnInfo): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tblColumnInfo = z 1 stolpcem;z več stolpci (#1)
+tblColumnInfo = z 1 stolpcem;z #1 stolpcema;s #1 stolpci;s #1 stolpci
 # LOCALIZATION NOTE (tblRowInfo): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tblRowInfo = in 1 vrstico;in več vrsticami (#1)
+tblRowInfo = in 1 vrstico;in #1 vrsticama;in #1 vrsticami;in #1 vrsticami
 
 # table or grid cell information
 columnInfo = Stolpec %S
@@ -258,12 +258,12 @@ textareaAbbr       =       bsdobmo
 # LOCALIZATION NOTE (tblColumnInfoAbbr): Semi-colon list of plural forms.
 # Number of columns within the table.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tblColumnInfoAbbr = #1c;#1c
+tblColumnInfoAbbr = #1s;#1s;#1s;#1s
 # LOCALIZATION NOTE (tblRowInfoAbbr): Semi-colon list of plural forms.
 # Number of rows within the table or grid.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-tblRowInfoAbbr = #1r;#1r
-cellInfoAbbr = c%Sr%S
+tblRowInfoAbbr = #1v;#1v;#1v;#1v
+cellInfoAbbr = s%Sv%S
 
 stateCheckedAbbr = (x)
 stateUncheckedAbbr = ( )
