--- a/sl/mobile/android/chrome/browser.properties
+++ b/sl/mobile/android/chrome/browser.properties
@@ -64,7 +64,7 @@ notificationRestart.button=Ponovni zagon
 
 # LOCALIZATION NOTE (popup.message): Semicolon-separated list of plural forms.
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
-popup.message=#1 je tej strani preprečil, da bi odprla pojavno okno. Bi ga radi prikazali?;#1 je tej strani preprečil, da bi odprla več pojavnih oken (#2). Bi jih radi prikazali?
+popup.message=#1 je strani preprečil, da bi odprla pojavno okno. Bi ga radi prikazali?;#1 je strani preprečil, da bi odprla #2 pojavni okni. Bi ju radi prikazali?;#1 je strani preprečil, da bi odprla #2 pojavna okna. Bi jih radi prikazali?;#1 je strani preprečil, da bi odprla #2 pojavnih oken. Bi jih radi prikazali?
 popup.dontAskAgain=Ne sprašuj več za to stran
 popup.show=Prikaži
 popup.dontShow=Ne prikazuj
@@ -156,8 +156,8 @@ deviceStorageVideos.dontAskAgain=Ne sprašuj več za to stran
 # LOCALIZATION NOTE (newtabpopup, newprivatetabpopup): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of tabs
-newtabpopup.opened=Odprt nov zavihek;Odprtih več novih zavihkov (#1)
-newprivatetabpopup.opened=Odprt nov zasebni zavihek;Odprtih več novih zasebnih zavihkov (#1)
+newtabpopup.opened=Odprt nov zavihek;Odprta #1 nova zavihka;Odprti #1 novi zavihki;Odprtih #1 novih zavihkov
+newprivatetabpopup.opened=Odprt nov zasebni zavihek;Odprta #1 nova zasebna zavihka;Odprti #1 novi zasebni zavihki;Odprtih #1 novih zasebnih zavihkov
 
 # LOCALIZATION NOTE (newtabpopup.switch): Ideally, this string is short (it's a
 # button label) and upper-case, to match Google and Android's convention.
