--- a/sl/toolkit/chrome/global/findbar.properties
+++ b/sl/toolkit/chrome/global/findbar.properties
@@ -13,9 +13,9 @@ CaseSensitive=(razlikovanje malih in velikih črk)
 # LOCALIZATION NOTE (FoundMatches): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is currently selected match and #2 the total amount of matches.
-FoundMatches=#1 zadetek od #2;Več zadetkov (#1) od #2
+FoundMatches=Zadetek #1 od #2;Zadetek #1 od #2;Zadetek #1 od #2;Zadetek #1 od #2
 # LOCALIZATION NOTE (FoundMatchesCountLimit): Semicolon-separated list of plural
 # forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the total amount of matches allowed before counting stops.
-FoundMatchesCountLimit=Več kot #1 zadetek;Več zadetkov (#1)
+FoundMatchesCountLimit=Več kot #1 zadetek;Več kot #1 zadetka;Več kot #1 zadetki;Več kot #1 zadetkov
