--- a/sl/browser/chrome/browser/browser.properties
+++ b/sl/browser/chrome/browser/browser.properties
@@ -34,9 +34,9 @@ xpinstallDisabledButton.accesskey=O
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Also see https://bugzilla.mozilla.org/show_bug.cgi?id=570012 for mockups
-addonDownloading=Prenašanje dodatka;Prenašanje dodatkov
-addonDownloadCancelled=Prenos dodatka preklican.;Prenosi dodatkov preklicani.
-addonDownloadRestart=Ponovno prenesi;Ponovno prenesi
+addonDownloading=Prenašanje dodatka;Prenašanje dodatkov;Prenašanje dodatkov;Prenašanje dodatkov
+addonDownloadCancelled=Prenos dodatka preklican.;Prenosi dodatkov preklicani.;Prenosi dodatkov preklicani.;Prenosi dodatkov preklicani.
+addonDownloadRestart=Ponovno prenesi;Ponovno prenesi;Ponovno prenesi;Ponovno prenesi
 addonDownloadRestart.accessKey=r
 addonDownloadCancelTooltip=Prekliči
 
@@ -44,8 +44,8 @@ addonDownloadCancelTooltip=Prekliči
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 first add-on's name, #2 number of add-ons, #3 application name
-addonsInstalled=Dodatek #1 je bil uspešno nameščen.;Št. uspešno nameščenih dodatkov: #2.
-addonsInstalledNeedsRestart=Dodatek #1 bo nameščen po ponovnem zagonu brskalnika #3.;Št. nameščenih dodatkov po ponovnem zagonu brskalnika #3: #2.
+addonsInstalled=Dodatek #1 je bil uspešno nameščen.;#2 dodatka uspešno nameščena.;#2 dodatki uspešno nameščeni.;#2 dodatkov uspešno nameščenih.
+addonsInstalledNeedsRestart=Dodatek #1 bo nameščen po ponovnem zagonu brskalnika #3.;#2 dodatka bosta nameščena po ponovnem zagonu brskalnika #3.;#2 dodatki bodo nameščeni po ponovnem zagonu brskalnika #3.;#2 dodatkov bo nameščenih po ponovnem zagonu brskalnika #3.
 addonInstallRestartButton=Ponovno zaženi
 addonInstallRestartButton.accesskey=P
 
@@ -87,7 +87,7 @@ lwthemeNeedsRestart.accesskey=P
 # LOCALIZATION NOTE (popupWarning.message): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is brandShortName and #2 is the number of pop-ups blocked.
-popupWarning.message=#1 je tej strani preprečil, da bi odprla pojavno okno.;#1 je tej strani preprečil, da bi odprla več pojavnih oken (#2).
+popupWarning.message=#1 je strani preprečil, da bi odprla pojavno okno.;#1 je strani preprečil, da bi odprla #2 pojavni okni.;#1 je strani preprečil, da bi odprla #2 pojavna okna.;#1 je strani preprečil, da bi odprla #2 pojavnih oken.
 popupWarningButton=Možnosti
 popupWarningButton.accesskey=M
 popupWarningButtonUnix=Nastavitve
@@ -224,7 +224,7 @@ menuRestoreAllWindowsSubview.label=Obnovi zaprta okna
 # LOCALIZATION NOTE (menuUndoCloseWindowLabel): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 Window Title, #2 Number of tabs
-menuUndoCloseWindowLabel=#1 (in #2 preostali zavihek);#1 (št. preostalih zavihkov: #2)
+menuUndoCloseWindowLabel=#1 (in #2 preostali zavihek);#1 (in #2 preostala zavihka);#1 (in #2 preostali zavihki);#1 (in #2 preostalih zavihkov)
 menuUndoCloseWindowSingleTabLabel=#1
 
 # Unified Back-/Forward Popup
@@ -315,7 +315,7 @@ editBookmarkPanel.editBookmarkTitle=Uredi ta zaznamek
 # the number of bookmarks to be removed.
 # If this causes problems with localization you can also do "Remove Bookmarks (#1)"
 # instead of "Remove #1 Bookmarks".
-editBookmark.removeBookmarks.label=Odstrani zaznamek;Odstrani zaznamke (#1)
+editBookmark.removeBookmarks.label=Odstrani zaznamek;Odstrani #1 zaznamka;Odstrani #1 zaznamke;Odstrani #1 zaznamkov
 
 # Post Update Notifications
 pu.notifyButton.label=Podrobnosti …
@@ -374,7 +374,7 @@ safebrowsing.notAnAttackButton.accessKey=N
 # LOCALIZATION NOTE (ctrlTab.showAll.label): #1 represents the number
 # of tabs in the current browser window. It will always be 2 at least.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-ctrlTab.showAll.label=;Prikaži vse zavihke (#1)
+ctrlTab.showAll.label=;Prikaži oba dva zavihka;Prikaži vse #1 zavihke;Prikaži vseh #1 zavihkov
 
 # LOCALIZATION NOTE (addKeywordTitleAutoFill): %S will be replaced by the page's title
 # Used as the bookmark name when saving a keyword for a search field.
@@ -387,7 +387,7 @@ tabview.title=%S - Skupine zavihkov
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the page title of the first tab in the unnamed group, 
 # #2 is the number of remaining tabs.
-tabview.moveToUnnamedGroup.label=#1 in še 1;#1 in še #2
+tabview.moveToUnnamedGroup.label=#1 in še 1;#1 in še #2;#1 in še #2;#1 in še #2
 
 # LOCALIZATION NOTE (tabviewButton.tooltip): %S is the keyboard shortcut for tab groups
 tabviewButton.tooltip=Razporedite zavihke v skupine (%S)
@@ -525,12 +525,12 @@ getUserMedia.shareEntireScreen.label = Celoten zaslon
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # Replacement for #1 is the name of the application.
 # Replacement for #2 is the number of windows currently displayed by the application.
-getUserMedia.shareApplicationWindowCount.label=#1 (#2 okno);#1 (več oken: #2)
+getUserMedia.shareApplicationWindowCount.label=#1 (#2 okno);#1 (#2 okni);#1 (#2 okna);#1 (#2 oken)
 # LOCALIZATION NOTE (getUserMedia.shareSelectedDevices.label):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # The number of devices can be either one or two.
-getUserMedia.shareSelectedDevices.label = Uporabi izbrano napravo;Uporabi izbrane naprave
+getUserMedia.shareSelectedDevices.label = Uporabi izbrano napravo;Uporabi izbrani napravi;Uporabi izbrane naprave;Uporabi izbrane naprave
 getUserMedia.shareSelectedDevices.accesskey = U
 getUserMedia.shareScreen.label = Uporabi zaslon
 getUserMedia.shareApplication.label = Uporabi izbrane aplikacije
