--- a/sl/browser/chrome/browser/devtools/webconsole.properties
+++ b/sl/browser/chrome/browser/devtools/webconsole.properties
@@ -216,7 +216,7 @@ emptyPropertiesList=Ni lastnost za prikaz
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of message repeats
 # example: 3 repeats
-messageRepeats.tooltip2=#1 ponovitev;Št. ponovitev: #1
+messageRepeats.tooltip2=#1 ponovitev;#1 ponovitvi;#1 ponovitve;#1 ponovitev
 
 # LOCALIZATION NOTE (openNodeInInspector): the text that is displayed in a
 # tooltip when hovering over the inspector icon next to a DOM Node in the console
@@ -249,7 +249,7 @@ messageToggleDetails=Prikaži/skrij podrobnosti sporočila.
 # #1 number of empty slots
 # example: 1 empty slot
 # example: 5 empty slots
-emptySlotLabel=#1 prosto mesto;Več prostih mest (#1)
+emptySlotLabel=#1 prosto mesto;#1 prosti mesti;#1 prosta mesta;#1 prostih mest
 
 # LOCALIZATION NOTE (table.index, table.iterationIndex, table.key, table.value):
 # the column header displayed in the console table widget.
