--- a/sl/browser/chrome/browser/downloads/downloads.properties
+++ b/sl/browser/chrome/browser/downloads/downloads.properties
@@ -103,4 +103,4 @@ fileExecutableSecurityWarningDontAsk=Ne sprašuj več
 # there are more downloads than can fit in the list in the panel. Use a
 # semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/Localization_and_Plurals
-otherDownloads2=+ Še %1$S trenutni prenos; + Več trenutnih prenosov (%1$S)
+otherDownloads2=+ še %1$S prenos;+ še %1$S prenosa;+ še %1$S prenosi;+ še %1$S prenosov
