--- a/sl/browser/chrome/browser/syncSetup.properties
+++ b/sl/browser/chrome/browser/syncSetup.properties
@@ -16,25 +16,25 @@ verifying.label = Preverjanje …
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of additional clients (was %S for a short while, use #1 instead, even if both work)
-additionalClientCount.label = in #1 dodatna naprava;in več dodatnih naprav (#1)
+additionalClientCount.label = in #1 dodatna naprava;in #1 dodatni napravi;in #1 dodatne naprave;in #1 dodatnih naprav
 # LOCALIZATION NOTE (bookmarksCount.label):
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of bookmarks (was %S for a short while, use #1 instead, even if both work)
-bookmarksCount.label        = #1 zaznamek;več zaznamkov (#1)
+bookmarksCount.label        = #1 zaznamek;#1 zaznamka;#1 zaznamki;#1 zaznamkov
 # LOCALIZATION NOTE (historyDaysCount.label):
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days (was %S for a short while, use #1 instead, even if both work)
-historyDaysCount.label      = #1 dan zgodovine;več dni zgodovine (#1)
+historyDaysCount.label      = #1 dan zgodovine;#1 dni zgodovine;#1 dni zgodovine;#1 dni zgodovine
 # LOCALIZATION NOTE (passwordsCount.label):
 # Semi-colon list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of passwords (was %S for a short while, use #1 instead, even if both work)
-passwordsCount.label        = #1 geslo;več gesel (#1)
+passwordsCount.label        = #1 geslo;#1 gesli;#1 gesla;#1 gesel
 # LOCALIZATION NOTE (addonsCount.label):
 # #1 is the number of add-ons, see the link above for forms
-addonsCount.label        = #1 dodatek;več dodatkov #1
+addonsCount.label        = #1 dodatek;#1 dodatka;#1 dodatki;#1 dodatkov
 
 save.recoverykey.title = Shrani obnovitveni ključ
 save.recoverykey.defaultfilename = Firefoxov obvnovitveni kljuc.html
