--- a/sl/browser/chrome/browser/webrtcIndicator.properties
+++ b/sl/browser/chrome/browser/webrtcIndicator.properties
@@ -31,23 +31,23 @@ webrtcIndicator.controlSharing.menuitem = Upravljanje skupne rabe
 # LOCALIZATION NOTE (webrtcIndicator.sharingCameraWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingCameraWithNTabs.menuitem = Skupna raba kamere z #1 zavihkom;Skupna raba kamere z več (#1) zavihki
+webrtcIndicator.sharingCameraWithNTabs.menuitem = Skupna raba kamere z #1 zavihkom;Skupna raba kamere z #1 zavihkoma;Skupna raba kamere s #1 zavihki;Skupna raba kamere s #1 zavihki
 # LOCALIZATION NOTE (webrtcIndicator.sharingMicrophoneWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Skupna raba mikrofona z #1 zavihkom;Skupna raba mikrofona z več (#1) zavihki
+webrtcIndicator.sharingMicrophoneWithNTabs.menuitem = Skupna raba mikrofona z #1 zavihkom;Skupna raba mikrofona z #1 zavihkoma;Skupna raba mikrofona s #1 zavihki;Skupna raba mikrofona s #1 zavihki
 # LOCALIZATION NOTE (webrtcIndicator.sharingApplicationWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingApplicationWithNTabs.menuitem = Skupna raba aplikacije z #1 zavihkom;Skupna raba aplikacije z več (#1) zavihki
+webrtcIndicator.sharingApplicationWithNTabs.menuitem = Skupna raba aplikacije z #1 zavihkom;Skupna raba aplikacije z #1 zavihkoma;Skupna raba aplikacije s #1 zavihki;Skupna raba aplikacije s #1 zavihki
 # LOCALIZATION NOTE (webrtcIndicator.sharingScreenWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingScreenWithNTabs.menuitem = Skupna raba zaslona z #1 zavihkom;Skupna raba zaslona z več (#1) zavihki
+webrtcIndicator.sharingScreenWithNTabs.menuitem = Skupna raba zaslona z #1 zavihkom;Skupna raba zaslona z #1 zavihkoma;Skupna raba zaslona s #1 zavihki;Skupna raba zaslona s #1 zavihki
 # LOCALIZATION NOTE (webrtcIndicator.sharingWindowWithNTabs.menuitem):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-webrtcIndicator.sharingWindowWithNTabs.menuitem = Skupna raba okna z #1 zavihkom;Skupna raba okna z več (#1) zavihki
+webrtcIndicator.sharingWindowWithNTabs.menuitem = Skupna raba okna z #1 zavihkom;Skupna raba okna z #1 zavihkoma;Skupna raba okna s #1 zavihki;Skupna raba okna s #1 zavihki
 # LOCALIZATION NOTE (webrtcIndicator.controlSharingOn.menuitem):
 # %S is the title of the tab using the share.
 webrtcIndicator.controlSharingOn.menuitem = Upravljanje skupne rabe na "%S"
