--- a/sl/dom/chrome/layout/HtmlForm.properties
+++ b/sl/dom/chrome/layout/HtmlForm.properties
@@ -35,4 +35,4 @@ ColorPicker=Izberite barvo
 # the first 20, plus an "and X more" line). #1 represents the number of files
 # minus 20 and will always be a number equal to or greater than 2. So the
 # singular case will never be used.
-AndNMoreFiles=in še ena;in še več (#1)
+AndNMoreFiles=in še ena;in še #1;in še #1;in še #1
