--- a/sl/mobile/android/chrome/aboutDownloads.properties
+++ b/sl/mobile/android/chrome/aboutDownloads.properties
@@ -5,7 +5,7 @@
 # LOCALIZATION NOTE (downloadMessage.deleteAll):
 # Semicolon-separated list of plural forms. See:
 # http://developer.mozilla.org/en/docs/Localization_and_Plurals
-downloadMessage.deleteAll=Izbrišem ta prenos?;Izbrišem vse prenose (#1)?
+downloadMessage.deleteAll=Izbrišem ta prenos?;Izbrišem #1 prenosa?;Izbrišem #1 prenose?;Izbrišem #1 prenosov?
 
 downloadAction.deleteAll=Izbriši vse
 
