--- a/sl/mobile/android/chrome/webapp.properties
+++ b/sl/mobile/android/chrome/webapp.properties
@@ -12,48 +12,48 @@ noUpdatesMessage=Posodobitev vaših aplikacij ni na voljo
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of updates.
 # example: 3 new updates available
-retrieveUpdateTitle=#1 nova posodobitev je na voljo;Posodobitve so na voljo (#1)
+retrieveUpdateTitle=Na voljo je #1 nova posodobitev;Na voljo sta #1 novi posodobitvi;Na voljo so #1 nove posodobitve;Na voljo je #1 novih posodobitev
 
 # LOCALIZATION NOTE (retrieveUpdateMessage): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to retrieve an update.
 # example: Touch to retrieve updates for Foo, Bar, Baz
-retrieveUpdateMessage=Dotaknite se za pridobivanje posodobitev (%1$S);Dotaknite se za pridobivanje posodobitev (%1$S)
+retrieveUpdateMessage=Dotaknite se za pridobivanje posodobitve (%1$S);Dotaknite se za pridobivanje posodobitev (%1$S);Dotaknite se za pridobivanje posodobitev (%1$S);Dotaknite se za pridobivanje posodobitev (%1$S)
 
 # LOCALIZATION NOTE (retrievingUpdateTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of updates.
 # example: Retrieving 3 updates…
-retrievingUpdateTitle=Pridobivanje #1 posodobitve …;Pridobivanje posodobitev (#1) …
+retrievingUpdateTitle=Pridobivanje #1 posodobitve …;Pridobivanje #1 posodobitev …;Pridobivanje #1 posodobitev …;Pridobivanje #1 posodobitev …
 
 # LOCALIZATION NOTE (retrievingUpdateMessage): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which we're retrieving updates.
 # example: Retrieving updates for Foo, Bar, Baz
-retrievingUpdateMessage=Pridobivanje posodobitev (%1$S); Pridobivanje posodobitev (%1$S)
+retrievingUpdateMessage=Pridobivanje posodobitve (%1$S); Pridobivanje posodobitev (%1$S); Pridobivanje posodobitev (%1$S); Pridobivanje posodobitev (%1$S)
 
 # LOCALIZATION NOTE (installUpdateTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of updates.
 # example: 3 updates downloaded
-installUpdateTitle=#1 posodobitev prenesena;Posodobitve prenesene (#1)
+installUpdateTitle=#1 posodobitev prenesena;#1 posodobitvi preneseni;#1 posodobitve prenesene;#1 posodobitev prenesenih
 
 # LOCALIZATION NOTE (installUpdateMessage2): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which to install an update.
 # example: Touch to install updates for Foo, Bar, Baz
-installUpdateMessage2=Dotaknite se za namestitev posodobitev za %1$S;Dotaknite se za namestitev posodobitev za %1$S
+installUpdateMessage2=Dotaknite se za namestitev posodobitve (%1$S);Dotaknite se za namestitev posodobitev (%1$S);Dotaknite se za namestitev posodobitev (%1$S);Dotaknite se za namestitev posodobitev (%1$S)
 
 # LOCALIZATION NOTE (retrievalFailedTitle): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of updates.
 # example: 3 updates failed
-retrievalFailedTitle=#1 posodobitev ni uspela;Posodobitve niso uspele (#1)
+retrievalFailedTitle=#1 posodobitev ni uspela;#1 posodobitvi nista uspeli;#1 posodobitve niso uspele;#1 posodobitev ni uspelo
 
 # LOCALIZATION NOTE (retrievalFailedMessage): Semi-colon list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # %1$S is a comma-separated list of apps for which retrieval failed.
 # example: Failed to retrieve updates for Foo, Bar, Baz
-retrievalFailedMessage=Pridobivanje posodobitev (%1$S) ni uspelo;Pridobivanje posodobitev (%1$S) ni uspelo
+retrievalFailedMessage=Pridobivanje posodobitve (%1$S) ni uspelo;Pridobivanje posodobitev (%1$S) ni uspelo;Pridobivanje posodobitev (%1$S) ni uspelo;Pridobivanje posodobitev (%1$S) ni uspelo
 
 webappsDisabled=Nameščanje aplikacij je onemogočeno
