--- a/sl/toolkit/chrome/mozapps/downloads/downloads.properties
+++ b/sl/toolkit/chrome/mozapps/downloads/downloads.properties
@@ -4,10 +4,10 @@
 
 # LOCALIZATION NOTE (seconds, minutes, hours, days): Semi-colon list of plural
 # forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
-seconds=sekunda;sekund
-minutes=minuta;minut
-hours=ura;ur
-days=dan;dni
+seconds=sekunda;sekundi;sekunde;sekund
+minutes=minuta;minuti;minute;minut
+hours=ura;uri;ure;ur
+days=dan;dni;dni;dni
 
 # LOCALIZATION NOTE (paused): — is the "em dash" (long dash)
 paused=Ustavljeno —  #1
@@ -130,8 +130,8 @@ chooseAppFilePickerTitle=Odpiranje s programom
 # plural forms. See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 number of files; #2 overall download percent (only for downloadsTitlePercent)
 # examples: 2% of 1 file - Downloads; 22% of 11 files - Downloads
-downloadsTitleFiles=#1 datoteka - Prenosi;#1 datotek - Prenosi
-downloadsTitlePercent=#2% od #1 datoteka - Prenosi;#2% od #1 datotek - Prenosi
+downloadsTitleFiles=#1 datoteka - Prenosi;#1 datoteki - Prenosi;#1 datoteke - Prenosi;#1 datotek - Prenosi
+downloadsTitlePercent=#2% od #1 datoteke - Prenosi;#2% od #1 datotek - Prenosi;#2% od #1 datotek - Prenosi;#2% od #1 datotek - Prenosi
 
 fileExecutableSecurityWarning="%S" je izvršljiva datoteka. Tovrstne datoteke lahko vsebujejo viruse ali drugo zlobno kodo, ki lahko škoduje vašemu računalniku. Bodite previdni ob odpiranju te datoteke. Ste prepričani, da želite zagnati "%S"?
 fileExecutableSecurityWarningTitle=Odprem izvršljivo datoteko?
