--- a/sl/toolkit/chrome/mozapps/extensions/extensions.properties
+++ b/sl/toolkit/chrome/mozapps/extensions/extensions.properties
@@ -16,7 +16,7 @@ uninstallNotice=Dodatek %S je bil odstranjen.
 #LOCALIZATION NOTE (numReviews): Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of reviews
-numReviews=#1 ocena;Ocen: #1
+numReviews=#1 ocena;#1 oceni;#1 ocene;#1 ocen
 
 #LOCALIZATION NOTE (dateUpdated) %S is the date the addon was last updated
 dateUpdated=Posodobljeno dne %S
@@ -106,14 +106,14 @@ details.notification.openH264Pending=Bo kmalu nameščen.
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days from now that the experiment will remain active (detail view).
-details.experiment.time.daysRemaining=Preostanek: #1 dan;Preostanek: #1 dni
+details.experiment.time.daysRemaining=Preostanek: #1 dan;Preostanek: #1 dni;Preostanek: #1 dni;Preostanek: #1 dni
 #LOCALIZATION NOTE (details.experiment.time.endsToday) The experiment will end in less than a day (detail view).
 details.experiment.time.endsToday=Preostanek: manj kot en dan
 # LOCALIZATION NOTE (details.experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (detail view).
-details.experiment.time.daysPassed=#1 dan nazaj;#1 dni nazaj
+details.experiment.time.daysPassed=#1 dan nazaj;#1 dni nazaj;#1 dni nazaj;#1 dni nazaj
 #LOCALIZATION NOTE (details.experiment.time.endedToday) The experiment ended less than a day ago (detail view).
 details.experiment.time.endedToday=Manj kot en dan nazaj
 #LOCALIZATION NOTE (details.experiment.state.active) This experiment is active (detail view).
@@ -125,14 +125,14 @@ details.experiment.state.complete=Končan
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days from now that the experiment will remain active (list view item).
-experiment.time.daysRemaining=Preostanek: #1 dan;Preostanek: #1 dni
+experiment.time.daysRemaining=Preostanek: #1 dan;Preostanek: #1 dni;Preostanek: #1 dni;Preostanek: #1 dni
 #LOCALIZATION NOTE (experiment.time.endsToday) The experiment will end in less than a day (list view item).
 experiment.time.endsToday=Preostanek: manj kot en dan
 # LOCALIZATION NOTE (experiment.time.daysPassed):
 # Semicolon-separated list of plural forms.
 # See: http://developer.mozilla.org/en/docs/Localization_and_Plurals
 # #1 is the number of days since the experiment ran (list view item).
-experiment.time.daysPassed=#1 dan nazaj;#1 dni nazaj
+experiment.time.daysPassed=#1 dan nazaj;#1 dni nazaj;#1 dni nazaj;#1 dni nazaj
 #LOCALIZATION NOTE (experiment.time.endedToday) The experiment ended less than a day ago (list view item).
 experiment.time.endedToday=Manj kot en dan nazaj
 #LOCALIZATION NOTE (experiment.state.active) This experiment is active (list view item).
