Bug 1104213 - add stack traces to timeline markers

--- a/pl/browser/chrome/browser/devtools/timeline.properties
+++ b/pl/browser/chrome/browser/devtools/timeline.properties
@@ -27,3 +27,7 @@ timeline.markerDetail.DOMEventPhase=Faza:
 timeline.markerDetail.DOMEventTargetPhase=target
 timeline.markerDetail.DOMEventCapturingPhase=capture
 timeline.markerDetail.DOMEventBubblingPhase=bubbling
+timeline.markerDetail.stack=Stos:
+timeline.markerDetail.startStack=Stos na początku:
+timeline.markerDetail.endStack=Stos na końcu:
+timeline.markerDetail.unknownFrame=<nieznane położenie>
