[ca] update from Pootle (firefox)

--- a/ca/browser/chrome/browser/loop/loop.properties
+++ b/ca/browser/chrome/browser/loop/loop.properties
@@ -209,7 +209,7 @@ call_with_contact_title=Conversa amb {{contactName}}
 outgoing_call_title=Voleu iniciar la conversa?
 initiate_audio_video_call_button2=Inicia
 initiate_audio_video_call_tooltip2=Inicia una conversa de vídeo
-initiate_audio_call_button2=Conversa de vídeo
+initiate_audio_call_button2=Conversa de veu
 initiate_call_cancel_button=Cancel·la
 
 ## LOCALIZATION NOTE (call_progress_connecting_description): This is displayed
