--- a/sl/dom/chrome/appstrings.properties
+++ b/sl/dom/chrome/appstrings.properties
@@ -30,6 +30,6 @@ externalProtocolChkMsg=Mojo odločitev si zapomni za vse povezave tega tipa.
 externalProtocolLaunchBtn=Poženi program
 malwareBlocked=Stran %S je bila prijavljena kot napadalna in je zaradi vaših varnostnih nastavitev zavrnjena.
 phishingBlocked=Stran %S je bila prijavljena kot spletna prevara, ki želi uporanike pripeljati do izdaje osebnih in finančnih podatkov.
-cspFrameAncestorBlocked=Varnostna politika vsebine strani ne dovoljuje vgradnje v taki obliki.
+cspBlocked=Varnostna politika vsebine strani ne dovoljuje nalaganja v taki obliki.
 corruptedContentError=Strani, ki si jo želite ogledati, ni mogoče prikazati, ker je bila med prenosom podatkov odkrita napaka.
 remoteXUL=Ta stran uporablja nepodprto tehnologijo, ki privzeto ni več na voljo.
