--- a/sl/dom/chrome/layout/css.properties
+++ b/sl/dom/chrome/layout/css.properties
@@ -106,6 +106,9 @@ PEColorSaturationEOF=nasičenost
 PEColorLightnessEOF=svetlost
 PEColorOpacityEOF=motnost kot vrednost bare
 PEExpectedNumber=Pričakovano število, vendar najden '%1$S'.
+PEPositionEOF=<position>
+PEExpectedPosition=Pričakovan <position>, vendar najden '%1$S'.
+PEExpectedRadius=Pričakovan radij, vendar najden '%1$S'.
 PEExpectedCloseParen=Pričakovan ')', vendar najden '%1$S'.
 PEDeclEndEOF=';' ali '}' za zaključek najave
 PEParseDeclarationNoColon=Pričakovan ':', vendar najden '%1$S'.
