--- a/sl/dom/chrome/security/security.properties
+++ b/sl/dom/chrome/security/security.properties
@@ -10,6 +10,8 @@ CrossSiteRequestBlocked=Zahteva iz drugega izvora zavrnjena. Politika enakega iz
 InvalidSTSHeaders=Stran uporablja neveljavno glavo Strict-Transport-Security.
 # LOCALIZATION NOTE: Do not translate "Public-Key-Pins or HPKP"
 InvalidPKPHeaders=Stran uporablja neveljavno glavo Public-Key-Pins.
+# LOCALIZATION NOTE: Do not translate "SHA-1"
+SHA1Sig=Stran uporablja potrdilo SHA-1. Priporočena je uporaba potrdil z algoritmi podpisa, ki uporabljajo močnejše funkcije izvlečka od SHA-1.
 InsecurePasswordsPresentOnPage=Polja z geslom so prisotna na strani, ki ni varna (http://). To predstavlja varnostno tveganje, ki omogoča krajo uporabniških imen in gesel.
 InsecureFormActionPasswordsPresent=Polja z geslom so prisotna v obrazcu z dejanjem, ki ni varno (http://). To predstavlja varnostno tveganje, ki omogoča krajo uporabniških imen in gesel.
 InsecurePasswordsPresentOnIframe=Polja z geslom so prisotna iframu, ki ni varen (http://). To predstavlja varnostno tveganje, ki omogoča krajo uporabniških imen in gesel.
