--- a/sl/toolkit/chrome/global/aboutSupport.properties
+++ b/sl/toolkit/chrome/global/aboutSupport.properties
@@ -82,3 +82,7 @@ webglRenderer = Izrisovalnik WebGL
 
 minLibVersions = Najnižja podprta različica
 loadedLibVersions = Trenutna različica
+
+hasSeccompBPF = Seccomp-BPF (Filtriranje sistemskih klicev)
+canSandboxContent = Peskovnik vsebinskih procesov
+canSandboxMedia = Peskovnik večpredstavnih vtičnikov
