--- a/sl/toolkit/chrome/global/aboutTelemetry.properties
+++ b/sl/toolkit/chrome/global/aboutTelemetry.properties
@@ -7,6 +7,10 @@
 # - %2$S will be replaced with the value of the toolkit.telemetry.server_owner preference
 pageSubtitle = Ta stran prikazuje podatke o učinkovitosti in uporabi funkcij, ki jih zbira telemetrija. Podatki se anonimno pošiljajo organizaciji %1$S, da bi lahko izboljšala %2$S.
 
+generalDataHeadingName = Ime
+
+generalDataHeadingValue = Vrednost
+
 slowSqlMain = Počasni stavki SQL glavne niti
 
 slowSqlOther = Počasni stavki SQL pomožnih niti
