Firefox Hello fixes

--- a/sl/browser/chrome/browser/loop/loop.properties
+++ b/sl/browser/chrome/browser/loop/loop.properties
@@ -186,7 +186,7 @@ video_call_menu_button=Videopogovor
 
 # Conversation Window Strings
 
-initiate_call_button_label2=Ste pripravljeni začeti pogovor?
+initiate_call_button_label2=Želite začeti pogovor?
 incoming_call_title2=Zahteva za pogovor
 incoming_call_accept_button=Sprejmi
 incoming_call_accept_audio_only_tooltip=Sprejmi z glasom
@@ -195,7 +195,7 @@ incoming_call_cancel_button=Prekliči
 incoming_call_cancel_and_block_button=Prekliči in zavrni
 incoming_call_block_button=Zavrni
 hangup_button_title=Odloži
-hangup_button_caption2=Izhod
+hangup_button_caption2=Končaj
 mute_local_audio_button_title=Izklopite svoj zvok
 unmute_local_audio_button_title=Vklopite svoj zvok
 mute_local_video_button_title=Izklopite svoj video
