--- a/nl/suite/chrome/browser/region.properties
+++ b/nl/suite/chrome/browser/region.properties
@@ -19,7 +19,7 @@ startup.homepage_override_url=http://www.mozilla-nl.org/projecten/seamonkey/star
 
 # This is the default set of web based feed handlers shown in the reader
 # selection UI
-browser.contentHandlers.types.0.title=Google
-browser.contentHandlers.types.0.uri=http://fusion.google.com/add?feedurl=%s
+browser.contentHandlers.types.0.title=Feedly
+browser.contentHandlers.types.0.uri=http://www.feedly.com/home#subscription/feed/%s
 browser.contentHandlers.types.1.title=My Yahoo!
 browser.contentHandlers.types.1.uri=http://add.my.yahoo.com/rss?url=%s
