--- a/nl/dom/chrome/security/security.properties
+++ b/nl/dom/chrome/security/security.properties
@@ -19,3 +19,8 @@ LoadingMixedActiveContent=Laden van gemengde (onveilige) actieve inhoud op een b
 LoadingMixedDisplayContent=Laden van gemengde (onveilige) vensterinhoud op een beveiligde pagina “%1$S”
 # LOCALIZATION NOTE: Do not translate "allow-scripts", "allow-same-origin", "sandbox" or "iframe"
 BothAllowScriptsAndSameOriginPresent=Een iframe met zowel allow-scripts als allow-same-origin voor zijn sandbox-attribuut kan zijn sandboxing verwijderen.
+
+# LOCALIZATION NOTE: Do not translate "SSL 3.0".
+WeakProtocolVersionWarning=Deze website maakt gebruik van het SSL 3.0-protocol voor versleuteling, deze wordt niet meer ondersteund en is onveilig.
+# LOCALIZATION NOTE: Do not translate "RC4".
+WeakCipherSuiteWarning=TDeze website maakt gebruik van de codering RC4 voor versleuteling, deze wordt niet meer ondersteund en is onveilig
