translation of updated strings from Aurora

--- a/uk/browser/chrome/browser/browser.properties
+++ b/uk/browser/chrome/browser/browser.properties
@@ -553,8 +553,8 @@ getUserMedia.continueSharing.accesskey = Н
 getUserMedia.stopSharing.label = Закрити доступ
 getUserMedia.stopSharing.accesskey = З
 
-getUserMedia.sharingMenu.label = Tabs sharing devices
-getUserMedia.sharingMenu.accesskey = d
+getUserMedia.sharingMenu.label = Спільне використання вкладок пристроями
+getUserMedia.sharingMenu.accesskey = с
 # LOCALIZATION NOTE (getUserMedia.sharingMenuCamera
 #                    getUserMedia.sharingMenuMicrophone,
 #                    getUserMedia.sharingMenuApplication,
@@ -571,24 +571,24 @@ getUserMedia.sharingMenu.accesskey = d
 #                    getUserMedia.sharingMenuMicrophoneScreen,
 #                    getUserMedia.sharingMenuMicrophoneWindow):
 # %S is the website origin (e.g. www.mozilla.org)
-getUserMedia.sharingMenuCamera = %S (camera)
-getUserMedia.sharingMenuMicrophone = %S (microphone)
-getUserMedia.sharingMenuApplication = %S (application)
-getUserMedia.sharingMenuScreen = %S (screen)
-getUserMedia.sharingMenuWindow = %S (window)
-getUserMedia.sharingMenuCameraMicrophone = %S (camera and microphone)
-getUserMedia.sharingMenuCameraMicrophoneApplication = %S (camera, microphone and application)
-getUserMedia.sharingMenuCameraMicrophoneScreen = %S (camera, microphone and screen)
-getUserMedia.sharingMenuCameraMicrophoneWindow = %S (camera, microphone and window)
-getUserMedia.sharingMenuCameraApplication = %S (camera and application)
-getUserMedia.sharingMenuCameraScreen = %S (camera and screen)
-getUserMedia.sharingMenuCameraWindow = %S (camera and window)
-getUserMedia.sharingMenuMicrophoneApplication = %S (microphone and application)
-getUserMedia.sharingMenuMicrophoneScreen = %S (microphone and screen)
-getUserMedia.sharingMenuMicrophoneWindow = %S (microphone and window)
+getUserMedia.sharingMenuCamera = %S (камера)
+getUserMedia.sharingMenuMicrophone = %S (мікрофон)
+getUserMedia.sharingMenuApplication = %S (програма)
+getUserMedia.sharingMenuScreen = %S (дисплей)
+getUserMedia.sharingMenuWindow = %S (вікно)
+getUserMedia.sharingMenuCameraMicrophone = %S (камера і мікрофон)
+getUserMedia.sharingMenuCameraMicrophoneApplication = %S (камера, мікрофон і програма)
+getUserMedia.sharingMenuCameraMicrophoneScreen = %S (камера, мікрофон і дисплей)
+getUserMedia.sharingMenuCameraMicrophoneWindow = %S (камера, мікрофон і вікно)
+getUserMedia.sharingMenuCameraApplication = %S (камера і програма)
+getUserMedia.sharingMenuCameraScreen = %S (камера і дисплей)
+getUserMedia.sharingMenuCameraWindow = %S (камера і вікно)
+getUserMedia.sharingMenuMicrophoneApplication = %S (мікрофон і програма)
+getUserMedia.sharingMenuMicrophoneScreen = %S (мікрофон і дисплей)
+getUserMedia.sharingMenuMicrophoneWindow = %S (мікрофон і вікно)
 # LOCALIZATION NOTE(getUserMedia.sharingMenuUnknownHost): this is used for the website
 # origin for the sharing menu if no readable origin could be deduced from the URL.
-getUserMedia.sharingMenuUnknownHost = Unknown origin
+getUserMedia.sharingMenuUnknownHost = Невідоме джерело
 
 # LOCALIZATION NOTE - %S is brandShortName
 slowStartup.message = Схоже, %S щось… повільно… запускається.
