--- a/sl/mobile/overrides/appstrings.properties
+++ b/sl/mobile/overrides/appstrings.properties
@@ -31,6 +31,6 @@ externalProtocolChkMsg=Mojo odločitev si zapomni za vse povezave te vrste.
 externalProtocolLaunchBtn=Zaženi program
 malwareBlocked=Spletna stran na naslovu %S je bila prijavljena kot napadalna in je zaradi vaših varnostnih nastavitev zavrnjena.
 phishingBlocked=Spletna stran na naslovu %S je bila prijavljena kot spletna prevara, ki želi uporabnike prepričati v izdajo osebnih ali finančnih podatkov.
-cspFrameAncestorBlocked=Ta spletna stran ima varnostni pravilnik, ki preprečuje, da bi bila spletna stran vgrajena na tak način.
+cspBlocked=Varnostna politika vsebine strani ne dovoljuje nalaganja v taki obliki.
 corruptedContentError=Strani, ki si jo želite ogledati, ni mogoče prikazati, ker je med prenosom podatkov prišlo do napake.
 remoteXUL=Ta stran uporablja nepodprto tehnologijo, ki samodejno ni več na razpolago v  Firefoxu.
