--- a/sl/webapprt/webapprt/overrides/appstrings.properties
+++ b/sl/webapprt/webapprt/overrides/appstrings.properties
@@ -30,7 +30,7 @@ externalProtocolChkMsg=Zapomni si mojo odločitev za vse povezave te vrste.
 externalProtocolLaunchBtn=Zaženi aplikacijo
 malwareBlocked=Stran %S je bila prijavljena kot napadalna stran in je bila zavrnjena na podlagi vaših varnostnih nastavitev.
 phishingBlocked=Stran %S je bila prijavljena kot spletna prevara, ki želi uporanike pripeljati do izdaje osebnih in finančnih podatkov.
-cspFrameAncestorBlocked=Aplikacija je poskusila dostopiti do vira z varnostno politiko vsebine, ki ne omogoča vgradnje v takšni obliki.
+cspBlocked=Varnostna politika vsebine strani ne dovoljuje nalaganja v taki obliki.
 corruptedContentError=Nadaljevanje nalaganja aplikacije ni mogoče, ker je bila med prenosom podatkov odkrita napaka.
 remoteXUL=Aplikacija je poskusila uporabiti tehnologijo, ki ni več podprta.
 
